// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documentation: Buttons Active State renders 1`] = `
<Fragment>
  <h2
    id="active-state"
  >
    Active state
  </h2>
  <p>
    Buttons will appear pressed (with a darker background, darker border, and inset shadow) when active. 
    <b>
      There’s no need to add a class to 
      <PrismCode
        className="language-html"
        component="code"
      >
        &lt;button&gt;
      </PrismCode>
      s as they use a pseudo-class.
    </b>
     However, you can still force the same active appearance with 
    <Property
      value=".active"
    />
     (and include the 
    <Attribute
      name="aria-pressed"
      value="true"
    />
     attribute) should you need to replicate the state programmatically.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    removeOuterTag={true}
    showCasePanel={true}
  >
    <div
      className="button-group"
    >
      

      <Button
        active={true}
        href="#"
        label="Executive"
        type="executive"
      />
      

      <Button
        active={true}
        href="#"
        label="Guiding"
        type="guiding"
      />
      

      <Button
        active={true}
        href="#"
        label="Destructive"
        type="destructive"
      />
      

    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Buttons Button Loader renders 1`] = `
<Fragment>
  <h2
    id="button-loader"
  >
    Button loader
  </h2>
  <p>
    Add class 
    <Property
      value=".loading"
    />
     to display the loader.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    removeOuterTag={true}
    showCasePanel={true}
  >
    <div
      className="button-group"
    >
      

      <Button
        label="Executive"
        loader={true}
        loading={true}
        type="executive"
      />
      

      <Button
        label="Guiding"
        loader={true}
        loading={true}
        type="guiding"
      />
      

      <Button
        label="Destructive"
        loader={true}
        loading={true}
        type="destructive"
      />
      

    </div>
  </ComponentPreview>
  <h3>
    Disabled loader
  </h3>
  <p>
    <Property
      value=".loading"
    />
     with 
    <Attribute
      name="disabled"
    />
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    removeOuterTag={true}
    showCasePanel={true}
  >
    <div
      className="button-group"
    >
      

      <Button
        disabled={true}
        label="Executive"
        loader={true}
        loading={true}
        type="executive"
      />
      

      <Button
        disabled={true}
        label="Guiding"
        loader={true}
        loading={true}
        type="guiding"
      />
      

      <Button
        disabled={true}
        label="Destructive"
        loader={true}
        loading={true}
        type="destructive"
      />
      

    </div>
  </ComponentPreview>
  <h3>
    Outline loader
  </h3>
  <p>
    <Property
      value=".loading"
    />
     with 
    <Property
      value=".outline"
    />
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    removeOuterTag={true}
    showCasePanel={true}
  >
    <div
      className="button-group"
    >
      

      <Button
        label="Executive"
        loader={true}
        loading={true}
        outline={true}
        type="executive"
      />
      

      <Button
        label="Guiding"
        loader={true}
        loading={true}
        outline={true}
        type="guiding"
      />
      

      <Button
        label="Destructive"
        loader={true}
        loading={true}
        outline={true}
        type="destructive"
      />
      

    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Buttons Button group renders 1`] = `
<Fragment>
  <h2
    id="button-group"
  >
    Using buttons together
  </h2>
  <p>
    When you use buttons next to each other you have to wrap them in a 
    <Property
      value=".button-group"
    />
    .
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="button-group"
    >
      

      <Button
        label="Activate"
        type="executive"
      />
      

      <Button
        label="Disable"
        type="guiding"
      />
      

      <Button
        label="Delete"
        type="destructive"
      />
      

    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Buttons ButtonGroup renders 1`] = `
<Fragment>
  <h2
    id="button-group"
  >
    Using buttons together
  </h2>
  <p>
    When you use buttons next to each other you have to wrap them in a 
    <Property
      value=".button-group"
    />
    .
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="button-group"
    >
      

      <Button
        label="Activate"
        type="executive"
      />
      

      <Button
        label="Disable"
        type="guiding"
      />
      

      <Button
        label="Delete"
        type="destructive"
      />
      

    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Buttons Disabled State renders 1`] = `
<Fragment>
  <h2
    id="disabled-state"
  >
    Disabled state
  </h2>
  <p>
    Make buttons look inactive by adding the 
    <Attribute
      name="disabled"
    />
     boolean attribute to any 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;button&gt;
    </PrismCode>
     element.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    removeOuterTag={true}
    showCasePanel={true}
  >
    <div
      className="button-group"
    >
      

      <Button
        disabled={true}
        label="Executive"
        type="executive"
      />
      

      <Button
        disabled={true}
        label="Guiding"
        type="guiding"
      />
      

      <Button
        disabled={true}
        label="Destructive"
        type="destructive"
      />
      

    </div>
  </ComponentPreview>
  <p>
    Disabled buttons using the 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;a&gt;
    </PrismCode>
     element behave a bit different:
  </p>
  <ul>
    <li>
      <PrismCode
        className="language-html"
        component="code"
      >
        &lt;a&gt;
      </PrismCode>
      s do not support the 
      <Attribute
        name="disabled"
      />
      attribute, so you must add the 
      <Property
        value=".disabled"
      />
       class to make it visually appear disabled.
    </li>
    <li>
      Some future-friendly styles are included to disable all 
      <Property
        value="pointer-events"
      />
       on anchor buttons. In browsers which support that property, you won’t see the disabled cursor at all.
    </li>
    <li>
      Disabled buttons should include the 
      <Attribute
        name="aria-disabled"
        value="true"
      />
       attribute to indicate the state of the element to assistive technologies.
    </li>
  </ul>
  <ComponentPreview
    codeFigure={true}
    language="html"
    removeOuterTag={true}
    showCasePanel={true}
  >
    <div
      className="button-group"
    >
      

      <Button
        disabled={true}
        href="#"
        label="Executive"
        type="executive"
      />
      

      <Button
        disabled={true}
        href="#"
        label="Guiding"
        type="guiding"
      />
      

      <Button
        disabled={true}
        href="#"
        label="Destructive"
        type="destructive"
      />
      

    </div>
  </ComponentPreview>
  <Alert
    type="warning"
  >
    <h5>
      Link functionality caveat
    </h5>
    <p>
      The 
      <Property
        value=".disabled"
      />
       class uses 
      <Property
        value="pointer-events: none"
      />
       to try to disable the link functionality of 
      <PrismCode
        className="language-html"
        component="code"
      >
        &lt;a&gt;
      </PrismCode>
      s, but that CSS property is not yet standardized. In addition, even in browsers that do support 
      <Property
        value="pointer-events: none"
      />
      , keyboard navigation remains unaffected, meaning that sighted keyboard users and users of assistive technologies will still be able to activate these links. So to be safe, add a 
      <Property
        value="tabindex=\\"-1\\""
      />
       attribute on these links (to prevent them from receiving keyboard focus) and use custom JavaScript to disable their functionality.
    </p>
  </Alert>
</Fragment>
`;

exports[`Documentation: Buttons Examples renders 1`] = `
<Fragment>
  <h2
    id="examples"
  >
    Examples
  </h2>
  <p>
    The DesignGuide includes a few predefined button styles, each serving its own semantic purpose.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    removeOuterTag={true}
    showCasePanel={true}
  >
    <div
      className="button-group"
    >
      

      <Button
        label="Executive"
        type="executive"
      />
      

      <Button
        label="Guiding"
        type="guiding"
      />
      

      <Button
        label="Destructive"
        type="destructive"
      />
      

      <Button
        label="Link"
        type="link"
      />
      

    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Buttons Outline Buttons renders 1`] = `
<Fragment>
  <h2
    id="outline-buttons"
  >
    Outline buttons
  </h2>
  <p>
    Replace the default modifier classes with the 
    <Property
      value=".btn-outline-{style}"
    />
     ones to get an outline of the button style.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    removeOuterTag={true}
    showCasePanel={true}
  >
    <div
      className="button-group"
    >
      

      <Button
        label="Executive"
        outline={true}
        type="executive"
      />
      

      <Button
        label="Guiding"
        outline={true}
        type="guiding"
      />
      

      <Button
        label="Destructive"
        outline={true}
        type="destructive"
      />
      

    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Buttons Sizes renders 1`] = `
<Fragment>
  <h2
    id="sizes"
  >
    Sizes
  </h2>
  <p>
    For a different sized button add 
    <Property
      value=".btn-lg"
    />
    , 
    <Property
      value=".btn-sm"
    />
     or 
    <Property
      value=".btn-xs"
    />
    .
  </p>
  <h3>
    Large
  </h3>
  <ComponentPreview
    codeFigure={true}
    language="html"
    removeOuterTag={true}
    showCasePanel={true}
  >
    <div
      className="button-group"
    >
      

      <Button
        label="Large button"
        size="lg"
        type="executive"
      />
      

      <Button
        label="Large button"
        size="lg"
        type="guiding"
      />
      

    </div>
  </ComponentPreview>
  <h3>
    Small
  </h3>
  <ComponentPreview
    codeFigure={true}
    language="html"
    removeOuterTag={true}
    showCasePanel={true}
  >
    <div
      className="button-group"
    >
      

      <Button
        label="Small button"
        size="sm"
        type="executive"
      />
      

      <Button
        label="Small button"
        size="sm"
        type="guiding"
      />
      

    </div>
  </ComponentPreview>
  <h3>
    Extra small
  </h3>
  <ComponentPreview
    codeFigure={true}
    language="html"
    removeOuterTag={true}
    showCasePanel={true}
  >
    <div
      className="button-group"
    >
      

      <Button
        label="Extra small button"
        size="xs"
        type="executive"
      />
      

      <Button
        label="Extra small button"
        size="xs"
        type="guiding"
      />
      

    </div>
  </ComponentPreview>
  <h3>
    Block level
  </h3>
  <p>
    Create block level buttons—those that span the full width of a parent by adding 
    <Property
      value=".btn-block"
    />
    .
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    removeOuterTag={true}
    showCasePanel={true}
  >
    <div
      className="button-group"
    >
      

      <Button
        fullWidth={true}
        label="Block level button"
        type="executive"
      />
      

      <Button
        fullWidth={true}
        label="Block level button"
        type="guiding"
      />
      

    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Buttons Usage With Icons renders 1`] = `
<Fragment>
  <h2
    id="usage-with-icons"
  >
    Usage with icons
  </h2>
  <p>
    To use a button with an icon simply put the icon markup inside the 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;button&gt;
    </PrismCode>
    .
  </p>
  <p>
    Read more about icon usage here 
    <Link
      to="/docs/core/icons"
    >
      here
    </Link>
    .
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    removeOuterTag={true}
    showCasePanel={true}
  >
    <div
      className="button-group"
    >
      

      <Button
        icon="cloud"
        label="Executive"
        type="executive"
      />
      


      <Button
        icon="cloud"
        label="Guiding"
        type="guiding"
      />
      

      <Button
        icon="cloud"
        label="Destructive"
        type="destructive"
      />
      

    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Buttons Usage With Other Tags renders 1`] = `
<Fragment>
  <h2
    id="usage-with-other-tags"
  >
    Usage with other tags
  </h2>
  <p>
    The 
    <Property
      value=".btn"
    />
     classes are designed to be used with the 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;button&gt;
    </PrismCode>
     element. However, you can also use these classes on 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;a&gt;
    </PrismCode>
     or 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;input&gt;
    </PrismCode>
     elements (though some browsers may apply a slightly different rendering).
  </p>
  <p>
    When using button classes on 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;a&gt;
    </PrismCode>
     elements that are used to trigger in-page functionality (like collapsing content), rather than linking to new pages or sections within the current page, these links should be given a 
    <Attribute
      name="role"
      value="button"
    />
     to appropriately convey their purpose to assistive technologies such as screen readers.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    removeOuterTag={true}
    showCasePanel={true}
  >
    <div
      className="button-group"
    >
      

      <Button
        href="#"
        label="Anchor"
        type="executive"
      />
      

      <Button
        label="Button"
        type="executive"
      />
      

      <Button
        btnType="button"
        input={true}
        type="executive"
        value="Input"
      />
      

      <Button
        btnType="submit"
        input={true}
        type="executive"
        value="Submit"
      />
      

      <Button
        btnType="reset"
        input={true}
        type="executive"
        value="Reset"
      />
      

    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Buttons renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    Use our button styles for actions in forms, dialogs, and more with support for multiple sizes, states, and more.
  </p>
  <Examples />
  <UsageWithOtherTags />
  <OutlineButtons />
  <ButtonGroup />
  <Sizes />
  <ActiveState />
  <DisabledState />
  <UsageWithIcons />
  <ButtonLoader />
</DocContainer>
`;
